{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 249,
  "lineage": "052a1bf4-8840-a5cb-f289-868166aa99e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "python_asia_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024a4568a0a63f436",
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:elastic-ip/eipalloc-024a4568a0a63f436",
            "association_id": "eipassoc-038a196e71e008970",
            "domain": "vpc",
            "id": "eipalloc-024a4568a0a63f436",
            "network_border_group": "ap-northeast-3",
            "network_interface": "eni-06cb0d62965f832f8",
            "private_dns": "ip-10-0-24-129.ap-northeast-3.compute.internal",
            "private_ip": "10.0.24.129",
            "public_dns": "ec2-15-152-169-143.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "15.152.169.143",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "python_asia_jumbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09a38e2e7a3cc42de",
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:instance/i-00f9601c1367fdf6e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f9601c1367fdf6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "PythonAsiaTalkKeyValuePair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02e0a0a66e8842e7b"
              }
            ],
            "primary_network_interface_id": "eni-02e0a0a66e8842e7b",
            "private_dns": "ip-10-0-24-202.ap-northeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.24.202",
            "public_ip": "15.152.154.10",
            "region": "ap-northeast-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-025aa631a2a585dea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018b99f1f3f4f8613",
            "tags": {
              "Name": "python-asia-jumpbox"
            },
            "tags_all": {
              "Name": "python-asia-jumpbox"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08726555a8f374d4b"
            ]
          },
          "dependencies": [
            "aws_security_group.python_asia_ec2_security_group",
            "aws_subnet.python_asia_public_subnet",
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "python_asia_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:internet-gateway/igw-03ea28f32e8f6d554",
            "id": "igw-03ea28f32e8f6d554",
            "owner_id": "647118473721",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "python-asia-internet-gateway"
            },
            "tags_all": {
              "Name": "python-asia-internet-gateway"
            },
            "vpc_id": "vpc-0cf62430c6d95b386"
          },
          "dependencies": [
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "python_asia_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024a4568a0a63f436",
            "association_id": "eipassoc-038a196e71e008970",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-086f58d73431cc37d",
            "network_interface_id": "eni-06cb0d62965f832f8",
            "private_ip": "10.0.24.129",
            "public_ip": "15.152.169.143",
            "region": "ap-northeast-3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-018b99f1f3f4f8613",
            "tags": {
              "Name": "python-asia-nat-gateway"
            },
            "tags_all": {
              "Name": "python-asia-nat-gateway"
            },
            "vpc_id": "vpc-0cf62430c6d95b386"
          },
          "dependencies": [
            "aws_eip.python_asia_elastic_ip",
            "aws_internet_gateway.python_asia_internet_gateway",
            "aws_subnet.python_asia_public_subnet",
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "python_asia_private_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d85dbe9e585e79f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-086f58d73431cc37d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-0d85dbe9e585e79f0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.python_asia_elastic_ip",
            "aws_internet_gateway.python_asia_internet_gateway",
            "aws_nat_gateway.python_asia_nat_gateway",
            "aws_route_table.python_asia_private_subnet_route_table",
            "aws_subnet.python_asia_public_subnet",
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "python_asia_public_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ea28f32e8f6d554",
            "id": "r-rtb-03cd3d71802192a391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-03cd3d71802192a39",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.python_asia_internet_gateway",
            "aws_route_table.python_asia_public_subnet_route_table",
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "python_asia_private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:route-table/rtb-0d85dbe9e585e79f0",
            "id": "rtb-0d85dbe9e585e79f0",
            "owner_id": "647118473721",
            "propagating_vgws": [],
            "region": "ap-northeast-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086f58d73431cc37d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf62430c6d95b386"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "python_asia_public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:route-table/rtb-03cd3d71802192a39",
            "id": "rtb-03cd3d71802192a39",
            "owner_id": "647118473721",
            "propagating_vgws": [],
            "region": "ap-northeast-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ea28f32e8f6d554",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf62430c6d95b386"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "python_asia_private_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca5617490d3672d6",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-0d85dbe9e585e79f0",
            "subnet_id": "subnet-090177a8fb762b248"
          },
          "dependencies": [
            "aws_route_table.python_asia_private_subnet_route_table",
            "aws_subnet.python_asia_private_subnet",
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "python_asia_private_subnet_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047a682825492e524",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-0d85dbe9e585e79f0",
            "subnet_id": "subnet-0bfdbea4153d8e467"
          },
          "dependencies": [
            "aws_route_table.python_asia_private_subnet_route_table",
            "aws_subnet.python_asia_private_subnet_2",
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "python_asia_public_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0380b4d0184f8285a",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-03cd3d71802192a39",
            "subnet_id": "subnet-018b99f1f3f4f8613"
          },
          "dependencies": [
            "aws_route_table.python_asia_public_subnet_route_table",
            "aws_subnet.python_asia_public_subnet",
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "python_asia_ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:security-group/sg-08726555a8f374d4b",
            "description": "Allow SSH into EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08726555a8f374d4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EC2 Security Group",
            "name_prefix": "",
            "owner_id": "647118473721",
            "region": "ap-northeast-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf62430c6d95b386"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "python_asia_rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:security-group/sg-0136f418a911f010f",
            "description": "Allow Ingress into RDS",
            "egress": [],
            "id": "sg-0136f418a911f010f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08726555a8f374d4b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "RDS Security Group",
            "name_prefix": "",
            "owner_id": "647118473721",
            "region": "ap-northeast-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf62430c6d95b386"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "python_asia_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:subnet/subnet-090177a8fb762b248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090177a8fb762b248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "647118473721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "python-asia-private-subnet"
            },
            "tags_all": {
              "Name": "python-asia-private-subnet"
            },
            "vpc_id": "vpc-0cf62430c6d95b386"
          },
          "dependencies": [
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "python_asia_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:subnet/subnet-0bfdbea4153d8e467",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.20.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfdbea4153d8e467",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "647118473721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "python-asia-private-subnet-2"
            },
            "tags_all": {
              "Name": "python-asia-private-subnet-2"
            },
            "vpc_id": "vpc-0cf62430c6d95b386"
          },
          "dependencies": [
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "python_asia_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:subnet/subnet-018b99f1f3f4f8613",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.24.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018b99f1f3f4f8613",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "647118473721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "python-asia-public-subnet"
            },
            "tags_all": {
              "Name": "python-asia-public-subnet"
            },
            "vpc_id": "vpc-0cf62430c6d95b386"
          },
          "dependencies": [
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "python_asia_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:vpc/vpc-0cf62430c6d95b386",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.16.0/20",
            "default_network_acl_id": "acl-06f51ba74675b3976",
            "default_route_table_id": "rtb-0d2df0c70d01b2ae6",
            "default_security_group_id": "sg-0ca8d3b6d1fcc73e9",
            "dhcp_options_id": "dopt-0bd1ede4758dc9613",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf62430c6d95b386",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2df0c70d01b2ae6",
            "owner_id": "647118473721",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "python-asia-vpc"
            },
            "tags_all": {
              "Name": "python-asia-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "python_asia_ec2_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:security-group-rule/sgr-04380717c4e5b1884",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04380717c4e5b1884",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-3",
            "security_group_id": "sg-08726555a8f374d4b",
            "security_group_rule_id": "sgr-04380717c4e5b1884",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.python_asia_ec2_security_group",
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "python_asia_ec2_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:security-group-rule/sgr-02e077b0cced1c22a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02e077b0cced1c22a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-3",
            "security_group_id": "sg-08726555a8f374d4b",
            "security_group_rule_id": "sgr-02e077b0cced1c22a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.python_asia_ec2_security_group",
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "python_asia_rds_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:647118473721:security-group-rule/sgr-04b265d0ef554008c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-04b265d0ef554008c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-08726555a8f374d4b",
            "region": "ap-northeast-3",
            "security_group_id": "sg-0136f418a911f010f",
            "security_group_rule_id": "sgr-04b265d0ef554008c",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.python_asia_ec2_security_group",
            "aws_security_group.python_asia_rds_security_group",
            "aws_vpc.python_asia_vpc"
          ]
        }
      ]
    }
  ]
}